crates/tui/tests/snapshots/views__detail-raw-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers get   account Acme (1)   list Weekly
{
  "id": 1,
  "email": "ada@example.com",
  "status": "subscribed",
  "subscribed_at": "2026-01-01T00:00:00+00:00",
  "unsubscribed_at": null,
  "custom_fields": {
    "City": "Lovelace"
  },
  "tags": [
    "beta",
    "vip"
  ]
}








q quit  Enter expand  J raw JSON  Esc back  Ctrl-p palette
